Textures added and bugs fixed using Copilot